--- a/layout/archive.ejs
+++ b/layout/archive.ejs
@@ -32,7 +32,7 @@
             <span class="node"></span>
             <div class="content">
                 <%- partial('common/post/title', { post: post, index: true, class_name: 'timeline-article-title' }) %>
-                <% AEChange %>
+                <%# AEChange %>
                 <%# if (count_per_month.length == 1) { %>
                 <div class="article-meta">
                     <%- partial('common/post/date', { post: post, class_name: 'article-date', date_format: null }) %>
